--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -89,7 +89,7 @@
         <button *ngIf="user && user.email_verified" mat-menu-item
           routerLink="/account/payment_methods">Payments</button>
         <button *ngIf="user && user.email_verified" mat-menu-item [matMenuTriggerFor]="settings">Settings</button>
-        <button mat-menu-item routerLink="/event/create-event">Create Events</button>
+        <button mat-menu-item routerLink="/events/create-event">Create Events</button>
         <button mat-menu-item (click)="authenticator.signOut();">Logout</button>
       </mat-menu>
 
@@ -106,8 +106,8 @@
       </button>
 
       <div style="float: right; padding-top: 6px;">
-        <button *ngIf="!mobileQuery.matches" routerLink="/event/browse-events" mat-button>Browse Events</button>
-        <button *ngIf="!mobileQuery.matches" routerLink="/event/create-event" mat-button>Create Events</button>
+        <button *ngIf="!mobileQuery.matches" routerLink="/events/browse-events" mat-button>Browse Events</button>
+        <button *ngIf="!mobileQuery.matches" routerLink="/events/create-event" mat-button>Create Events</button>
         <button *ngIf="!mobileQuery.matches" routerLink="/help-centre" mat-button>Help Centre
           <!-- <span matSuffix><mat-icon style="color: white;">menu</mat-icon></span> -->
         </button>
