--- a/src/app/landing-page/get-app/get-app.component.html
+++ b/src/app/landing-page/get-app/get-app.component.html
@@ -1,7 +1,7 @@
 <section id="get-app" class="get-app">
     <div  class="container">
         <div class="text-center">
-        <h1 class="download-text">Download Our Apps</h1>
+        <h1 class="download-text">Our Apps</h1>
       <a mat-button href="https://apps.apple.com/za/app/obsidian/id1486473378"><img class="ios-image" src="../../../assets/images/ios_svg.svg"/></a>
 
       <a mat-button href="https://play.google.com/store/apps/details?id=com.obsidian.obsidian"><img class="android-image"  src="../../../assets/images/android_app.png"/></a>
