--- a/src/app/auth/sign-in/sign-in.component.html
+++ b/src/app/auth/sign-in/sign-in.component.html
@@ -6,7 +6,7 @@
         <amplify-authenticator [hideSignUp]="true" [services]="services">
           <ng-template amplifySlot="header">
             <div style="padding: var(--amplify-space-large); text-align: center">
-              <button mat-button routerLink="/">Ticket</button>
+              <button mat-button routerLink="/landing" >Ticket</button>
             </div>
           </ng-template>
 
