--- a/src/app/landing-page/intro/intro.component.scss
+++ b/src/app/landing-page/intro/intro.component.scss
@@ -18,7 +18,7 @@
 
 .home-intro-title {
   color: black;
-  margin: 50px 0 24px;
+  margin: 50px 19px 24px;
   font-size: -webkit-xxx-large;
   // font-size: 48px;
   font-weight: 900;
