--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -9,9 +9,9 @@
 // Page loader Topbar
 // @import '../../vendor/pace/pace-theme-min.css';
 @import "scss/main";
-
-// @import '~firebaseui/dist/firebaseui.css';
-
+@import "owl.carousel/dist/assets/owl.carousel.css";
+@import "owl.carousel/dist/assets/owl.theme.default.css";
+@import "@fortawesome/fontawesome-free/css/all.css";
 
 
 
