--- a/src/app/events/create-event/create-event.component.html
+++ b/src/app/events/create-event/create-event.component.html
@@ -10,7 +10,7 @@
             <strong>Name your event (Example: My event Name)</strong>
           </div>
           <mat-grid-list cols="2" rowHeight="90px" gutterSize="12px">
-            <mat-grid-tile>
+            <mat-grid-tile colspan="2">
               <mat-form-field class="app-full-width">
                 <input matInput required name="eventName" placeholder="Event Name" type="text"
                   formControlName="eventName">
@@ -18,6 +18,7 @@
                   (click)="eventNameInput?.reset()">
                   <mat-icon>close</mat-icon>
                 </button>
+                <!-- <mat-hint align="start">Name your event (Example: My event Name)</mat-hint> -->
               </mat-form-field>
             </mat-grid-tile>
 
