--- a/src/app/events/event-list/event-list.component.html
+++ b/src/app/events/event-list/event-list.component.html
@@ -3,10 +3,11 @@
   <ng-container *ngFor="let event of events; let i = index">
     <ng-template carouselSlide>
       <div class="card">
-        <img [src]="'https://picsum.photos/200/300?random=' + i" class="card-img-top" alt="Event image">
+        <img *ngIf="!event.imageURL" [src]="'https://picsum.photos/200/300?random=' + i" class="card-img-top" alt="Event image">
+        <img *ngIf="event.imageURL" [src]="event.imageURL" class="card-img-top" alt="Event image">
         <div class="card-body">
           <h5 class="card-title">{{ event.eventName }}</h5>
-          <p class="card-text">{{ event.eventName }}</p>
+          <p class="card-text">{{ event.description }}</p>
         </div>
       </div>
     </ng-template>
