--- a/src/app/events/event-list/event-list.component.scss
+++ b/src/app/events/event-list/event-list.component.scss
@@ -1,6 +1,6 @@
 .carousel-container {
   width: 70%; /* Adjust this value as needed */
-  margin: 0 auto;
+  margin: 10px auto;
 }
 
 .carousel-container .card .card-img-top {
