--- a/src/app/user-profile/user-profile.component.scss
+++ b/src/app/user-profile/user-profile.component.scss
@@ -4,6 +4,9 @@
   // padding: 20px;
   max-height: 100vh;
   overflow-y: auto;
+  // min-width: 150px;
+  max-width: 80vw;
+  width: 100%;
 }
 
 .profile-content {
