--- a/src/app/user-profile/user-profile.component.scss
+++ b/src/app/user-profile/user-profile.component.scss
@@ -4,8 +4,8 @@
   // padding: 20px;
   max-height: 100vh;
   overflow-y: auto;
-  // min-width: 150px;
-  max-width: 80vw;
+  min-width: 50vw;
+  max-width: 50vw;
   width: 100%;
 }
 
