--- a/src/app/landing-page/footer/footer.component.html
+++ b/src/app/landing-page/footer/footer.component.html
@@ -12,7 +12,7 @@
                         </div>
                     </div>
             <div fxFlex="33.33" class="footer-item text-center">
-                 Ticket Technologies Pty. Ltd 2024©, All rights reserved
+                 Obsydian Technologies Pty. Ltd 2024©, All rights reserved
             </div>
         </div>
     </div>
