--- a/src/app/events/event-list/event-list.component.html
+++ b/src/app/events/event-list/event-list.component.html
@@ -1,3 +1,6 @@
+<div *ngIf="loading">
+  <mat-progress-bar mode="indeterminate"></mat-progress-bar>
+</div>
 <div *ngIf="events && events.length > 0" class="carousel-container">
 <owl-carousel-o [options]="customOptions">
   <ng-container *ngFor="let event of events; let i = index">
