--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -107,7 +107,7 @@
       </button>
 
       <div style="float: right; padding-top: 6px;">
-        <button *ngIf="!mobileQuery.matches" routerLink="/events" mat-button>Browse Events</button>
+        <button *ngIf="!mobileQuery.matches" routerLink="/events" mat-button>Events</button>
         <button *ngIf="!mobileQuery.matches" routerLink="/events/create-event" mat-button>Create Events</button>
         <button *ngIf="!mobileQuery.matches" routerLink="/help-centre" mat-button>Help Centre
           <!-- <span matSuffix><mat-icon style="color: white;">menu</mat-icon></span> -->
@@ -150,7 +150,7 @@
       </button>
       <button routerLink="/events" mat-menu-item>
         <mat-icon>search</mat-icon>
-        <span>Browse Events</span>
+        <span>Events</span>
       </button>
       <!-- <button (click)="openBrowseTasks()" mat-menu-item>
         <mat-icon>search</mat-icon>
