help center component

--- a/src/app/help-center/help-center.component.html
+++ b/src/app/help-center/help-center.component.html
@@ -1,1 +1,13 @@
-<p>help-center works!</p>
+<section>
+    <h2>Help Center</h2>
+  </section>
+<section>
+    <div class="search-container">
+        <mat-form-field class="search-box">
+            <mat-icon matPrefix>search</mat-icon>
+            <input matInput type="text" placeholder="Search Help Articles">
+        </mat-form-field>
+        <button class="primary" type="button" (click)="searchArticles()">Search</button>
+    </div>
+</section>
+  
